# otus-c-2025-09-bn

./: .gitignore  README.md
DZ_11_OOP/: Makefile  README.md  app_gtk  app_gtk.c
DZ_12_error_handling/: Makefile  README.md
DZ_12_error_handling/include/: logger.h
DZ_12_error_handling/src/: logger.c  main.c  test.c
DZ_15_IPC/: Makefile  README.md  daemon.c
DZ_16_shared_memory/: Makefile  README.md  crc32_tool.c
DZ_17_threads/: Makefile  README.md  parser_logs.c
DZ_2/Converter/: convert_cp1251_to_utf8.txt
DZ_21_network/: Makefile  README.md  ascii_art.c
DZ_23_web_services/: Makefile  README.md  RPS_Makefile  rps_server.c  server.c
DZ_26_tooling_for_linux_kernel/: README.md  get_trace.sh  tracing.c
DZ_27_drivers_system/: Makefile  Makefile_orig  README.md  README_config.md  README_ring_buffer.md  README_simple_ring_buffer.md  deploy_module.sh  example.c  lesson_module.c  lesson_test.c  ring_buffer.c  simple_ring_buffer.c  test.c
DZ_27_drivers_system/src/: lesson_module.c  lesson_test.c  module_ring.c  module_test.c
DZ_2_encoding/: .gitignore  README.md
DZ_2_encoding/Archjpeg/: Makefile  README.md  find_signature.c  rarjpeg_checker-orig.c  zip_checker.c  zipjpeg_checker.c
DZ_2_encoding/Converter/: Makefile  README.md  conv.c  convert_cp1251_to_utf8.txt  convert_iso8859_5_to_utf8.txt  convert_iso8859_to_utf8.txt  convert_koi8r_to_utf8.txt  converter.c
DZ_2_encoding/Rarjpeg/: rarjpeg_checker.c
DZ_2_encoding/template/: main.c
DZ_32_DB/: Makefile  README.md
DZ_32_DB/src/: db_postgres.c
DZ_33_graph_API/: Makefile  README.md  cube.c  lesson.c  texture_cube.c
DZ_35_Game/: Makefile  README.md  tetris.c
DZ_6_libs/: .gitignore  README.md  call_curl.c  test.c  weather_ccan.c  weather_cjson.c  weather_json-c.c
DZ_7_assembler/: Makefile  README.md  asm-prog  main.asm  main.c  main_c.c
DZ_8_Unix_history/: README.md
DZ_8_Unix_history/curl-8.18.0/: Makefile  buildinfo.txt  config.status  curl-config  libcurl.pc  libtool
DZ_8_Unix_history/curl-8.18.0/docs/: Makefile  curl-config.1  mk-ca-bundle.1  runtests.1  testcurl.1  wcurl.1
DZ_8_Unix_history/curl-8.18.0/include/: Makefile
DZ_8_Unix_history/curl-8.18.0/lib/: Makefile  curl_config.h  libcurl.la  libcurl_la-asyn-base.lo  libcurl_la-asyn-thrdd.lo  libcurl_la-cf-ip-happy.lo  libcurl_la-cshutdn.lo  libcurl_la-curl_fopen.lo  libcurl_la-curl_share.lo  libcurl_la-cw-pause.lo  (+137 more)
DZ_8_Unix_history/lib/: libcurl.la  libcurl.so.4.8.0
DZ_9_Unix_program/: README.md  my_project.patch
Project/: CMakeLists.txt  Makefile  README.md  build_cmake.sh  mandel.c  mandel_anim.c  mandel_color.c  mandel_sdl.c  mandel_sdl_mouse.c  mandel_smooth.c  mandelbrot.ppm
Project/include/: mandel.h
Project/src/: mandel.c  mandel_anim.c  mandel_sdl.c  mandel_sdl_mouse.c  mandel_smooth.c  mandelbrot.c  mandelbrot_anim.c  mandelbrot_base.c  mandelbrot_budda.c  mandelbrot_bw.c  mandelbrot_color.c  mandelbrot_cub.c  mandelbrot_sdl.c  mandelbrot_sdl_mouse.c  mandelbrot_smooth.c
(+1430 files in other folders)
